--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -1,146 +1,7 @@
 <%- include('./headerHTML')-%>
 <link rel="stylesheet" type="text/css" href="../../public/css/header.css">
 <link rel="stylesheet" type="text/css" href="../../public/css/card.css">
-<style>
-      .chatButton {
-        align-items: center;
-        background-image: linear-gradient(144deg,#AF40FF, #5B42F3 50%,#00DDEB);
-        border: 0;
-        border-radius: 50%;
-        box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px;
-        box-sizing: border-box;
-        color: #FFFFFF;
-        display: flex;
-        font-family: Phantomsans, sans-serif;
-        font-size: 18px;
-        justify-content: center;
-        align-items: center;
-        line-height: 1em;
-        width: 60px;
-        height: 60px;
-        padding: 3px;
-        text-decoration: none;
-        user-select: none;
-        -webkit-user-select: none;
-        touch-action: manipulation;
-        white-space: nowrap;
-        cursor: pointer;
-        transition: all .3s;
-        }
 
-@media(max-width:500px){
-  .chatButton{
-    height: 50px;
-    width: 50px;
-    font-size: 10px !important;
-  }
-}
-
-#biChat{
-  transition: .25s;
-}
-
-.chatButton:active,
-.chatButton:hover {
- outline: 0;
- #biChat{
-  font-size: 35px !important;
-  transform: rotate(5deg);
- }
-}
-
-.chatButton span {
- background-color: rgb(5, 6, 45);
- /* padding: 16px 24px; */
- /* padding: 30px 0px; */
- border-radius: 50%;
- width: 100%;
- height: 100%;
- transition: 300ms;
-}
-
-.chatButton:hover span {
- background: none;
-}
-
-.chatButton:active {
- transform: scale(0.9);
-}
-    .Btn {
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-  width: 45px;
-  height: 45px;
-  border: none;
-  border-radius: 50%;
-  cursor: pointer;
-  position: relative;
-  overflow: hidden;
-  transition-duration: .3s;
-  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.199);
-  background-color: rgb(255, 65, 65);
-}
-
-/* plus sign */
-.sign {
-  width: 100%;
-  transition-duration: .3s;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.sign svg {
-  width: 17px;
-}
-
-.sign svg path {
-  fill: white;
-}
-/* text */
-.textS {
-  position: absolute;
-  right: 0%;
-  width: 0%;
-  opacity: 0;
-  color: white;
-  font-size: 1em !important;
-  font-weight: 600 !important;
-  transition-duration: .3s;
-}
-/* hover effect on button width */
-.Btn:hover {
-  width: 125px;
-  border-radius: 40px;
-  transition-duration: .3s;
-}
-
-.Btn:hover .sign {
-  width: 30%;
-  transition-duration: .3s;
-  padding-left: 20px;
-}
-/* hover effect button's text */
-.Btn:hover .textS {
-  opacity: 1;
-  width: 70%;
-  transition-duration: .3s;
-  padding-right: 10px;
-}
-/* button click effect*/
-.Btn:active {
-  transform: translate(2px ,2px);
-}
-
-.swal2-popup{
-  border-radius: 30px;
-  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.633);
-  background-color: rgba(0, 0, 0, 0.62) !important;
-  border: 1px solid rgba(49, 49, 49, 0.715);
-  color: white !important;
-}
-</style>
 </head>
 <body>
     <div class="loading-screen">
@@ -150,7 +11,7 @@
     <div class="header2">
         <div class="topHeader">
             <div><a class="left text-danger logOutButton"  title="logout" style="display:flex; justify-content: center;"><i class="bi bi-box-arrow-left"></i></a></div>
-            <div class="center text-center RARE" style=" text-shadow: 1px 1px 3px rgba(255, 255, 255, 0.573);">
+            <div class="center text-center RARE" style="text-shadow: 1px 1px 5px rgb(0, 0, 0);">
                 <a href="/user/home/" class="RAREHEAD">RARE KICK'S</a>
             </div>
             <div class="right">
