--- a/views/user/checkOut.ejs
+++ b/views/user/checkOut.ejs
@@ -20,7 +20,7 @@
                 <div class="row">
                     <h5 class="text-center pt-1 pb-3"><u><i class="fa-solid fa-location-dot me-2" style="font-size: 30px;"></i>Address</u></h3>
                     <div class="col-12 col-md-3 mt-3 d-flex addressContainer">
-                        <a href="/user/profile/" style="color: black;"><span class="btn btn-dark p-2" style="font-size: 13px;">Change Address</span></a>
+                        <a href="/user/profile/#addresses" style="color: black;"><span class="btn btn-dark p-2" style="font-size: 13px;">Change Address</span></a>
                         <a href="/user/addAddress/" style="color: black;"><span class="btn btn-dark p-2" style="font-size: 13px;">Add New Address</span></a>
                     </div>
                     <% if(!address){%>
