--- a/views/user/otpLogin.ejs
+++ b/views/user/otpLogin.ejs
@@ -1,7 +1,5 @@
 <%- include('../layout/headerHTML')-%>
 <link rel="stylesheet" type="text/css" href="../../public/css/userRegister.css">
-<!-- <link rel="stylesheet" type="text/css" href="../../public/css/adminEditUser.css"> -->
-
 </head>
 <body>
     
@@ -25,9 +23,7 @@
             </div>
         </div>
         <div class="text-center mt-5" style="font-size: 15px;">Don’t you have account? <a href="/user/register/" style="color: rgb(238, 0, 255);"> Sign-Up</a></div>
-
       </form>
-
       <script>
             (() => {
             'use strict'
@@ -52,38 +48,7 @@
         </script>
 
 </div>
-<div class="alertKey">
-  <% if(locals.message) { %>
-    <div class="alert alert-danger alert-dismissible fade show" role="alert" style="position: absolute; right: 20px; bottom: 30px;"
-      data-bs-autohide="true" data-bs-delay="2000" id="success-alert"> 
-      <strong><%= message %></strong>
-      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-    </div>
-    
-    <script>
-      // Add this script to your page
-      setTimeout(function() {
-        document.getElementById('success-alert').style.display = 'none';
-      }, 2000); // Adjust the delay (in milliseconds) as needed
-    </script>
-  <% } %>      
-</div>
-<div class="alertKey">
-  <% if(locals.messageS) { %>
-    <div class="alert alert-success alert-dismissible fade show" role="alert" style="position: absolute; right: 20px; bottom: 30px;"
-      data-bs-autohide="true" data-bs-delay="2000" id="success-alert"> 
-      <strong><%= messageS %></strong>
-      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-    </div>
-
-    <script>
-      // Add this script to your page
-      setTimeout(function() {
-        document.getElementById('success-alert').style.display = 'none';
-      }, 2000); // Adjust the delay (in milliseconds) as needed
-    </script>
-  <% } %>      
-</div>
+<%- include('../layout/alert')-%>
 </div>
 <script>
   document.getElementById('startCountdownButton2').addEventListener('click', function () {
