--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -1,110 +1,7 @@
 <%- include('../layout/headerHTML')-%>
 <link rel="stylesheet" type="text/css" href="../../public/css/homePage.css">
 <link rel="stylesheet" type="text/css" href="../../public/css/profile.css">
-<style>
-  
-.profile-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0;
-}
 
-.profile-card {
-    /* border: 1px solid rgb(146, 146, 146); */
-    background-color: white;
-    border-radius: 30px;
-    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.02), 0 10px 10px rgba(0, 0, 0, 0.0);
-    overflow: hidden;
-    width: 80%;
-    max-width: 400px;
-}
-
-.headerC {
-    background-color: #000000;
-    border-bottom-right-radius: 20px;
-    border-bottom-left-radius: 20px;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    position: relative;
-    overflow: hidden;
-    color: white;
-}
-
-.headerC::before,
-.headerC::after {
-    content: "";
-    background-color: #424242;
-    border-radius: 50%;
-    position: absolute;
-    z-index: 2;
-}
-
-.headerC::before {
-    height: 200px;
-    width: 200px;
-    top: -60px;
-    left: -100px;
-}
-
-.headerC::after {
-    height: 100px;
-    width: 100px;
-    right: -20px;
-    bottom: -30px;
-}
-
-.header-summary {
-    display: flex;
-    flex-direction: column;
-    z-index: 3;
-    margin-left: 20px;
-}
-
-.summary-text {
-    font-size: 1.2rem;
-    font-weight: 300;
-    margin-bottom: 1.5rem;
-}
-
-.summary-balance {
-    font-size: 1.5rem;
-    letter-spacing: 1.5px;
-    margin-bottom: 0.8rem;
-}
-
-.content {
-    z-index: 4;
-    margin-top: 20px;
-}
-
-.card-item {
-    margin: 20px;
-    display: flex;
-    flex-direction: column;
-}
-
-.card-item span:first-child {
-    font-size: 0.7rem;
-    font-weight: bold;
-    margin-bottom: 10px;
-}
-
-.card-item span:last-child {
-    font-size: 1.2rem;
-    font-weight: 300;
-}
-
-.dollar {
-    color: #FFC168;
-}
-
-.transaction:hover {
-    box-shadow: 0 1px 5px -1px rgba(0, 0, 0, 0.3), inset 0 0 0 1px rgba(0, 0, 0, 0.15);
-}
-
-</style>
 </head>
 <body>
     <%- include('../layout/header') %>
@@ -138,49 +35,6 @@
         <a href="/user/changePassword" style="text-decoration: none; color: white;"><button class="btn btn-dark pt-2 pb-2 ps-1 pe-1 mt-3">Change Password</button></div></a>
     </div>
 
-    <style>
-        .referral-container {
-            max-width: 800px;
-            min-width: 200px;
-            margin: 20px auto;
-            text-align: center;
-            font-family: 'Michroma', sans-serif;
-            background-color: #f9f9f9;
-        }
-        .referral-container p {
-            font-size: 16px;
-            color: #333;
-        }
-        .referral-container strong {
-            color: #140656;
-        }
-        .referral-container .input-group {
-            justify-content: center;
-        }
-        .referral-container button {
-            background-color: #000000;
-            color: #fff;
-        }
-        .border-design {
-        position: relative;
-        }
-
-        .border-design::before {
-        content: '';
-        position: absolute;
-        width: 100%;
-        height: 0.5px;
-        bottom: 0;
-        left: 0;
-        background-color: rgb(74, 74, 74);
-        transition: width 0.3s ease-in-out; /* Adjust the duration and easing as needed */
-        }
-
-        .border-design:hover::before {
-        width: 0; /* Change this value to adjust the "moving" effect */
-        }
-
-    </style>
     <%if(user.referralCode){%>
         <h3 class="mt-2 container text-start mb-3 text-dark" style="font-family: 'Michroma', sans-serif;"><i class=" ms-2 fas fa-tag me-2"></i> Offer  Zone. !</h3>
         <div class="referral-container card" style="padding: 20px !important;">
@@ -207,24 +61,7 @@
                 </div>
           </div>
     <%}%>
-<script>
-    function copyReferralLink() {
-        var referralLink = document.getElementById("referralLink");
 
-        // Select the text field
-        referralLink.select();
-        referralLink.setSelectionRange(0, 99999); /* For mobile devices */
-
-        // Copy the text inside the text field
-        navigator.clipboard.writeText(referralLink.value)
-            .then(() => {
-                showSuccess("Referral link copied successfully");
-            })
-            .catch((err) => {
-                console.error('Unable to copy:', err);
-            });
-    }
-</script>
     <div class="container mb-2" style="font-family: 'Michroma', sans-serif;">
         <h3 class="mb-4 mt-2 btn btn-dark rounded mb-3" style="font-family: 'Michroma', sans-serif;"><i class="fa-solid bi-wallet2 me-2" style="font-size: 20px;"></i>Wallet</h3>
         <div class="profile-container">
@@ -257,7 +94,7 @@
             </div>
         </div>
        </div>
-    <div class="container mt-2 d-flex" style="align-items: center;">
+    <div class="container mt-2 d-flex" style="align-items: center;" id="addresses">
         <h3 class="mb-4 mt-2 btn btn-dark rounded mb-3" style="font-family: 'Michroma', sans-serif;"><i class="fa-solid fa-location-dot me-2" style="font-size: 20px;"></i>Address !</h3>
         <%if(addresses?.length<=3){%>
             <a href="/user/addAddress/" style="text-decoration: none; color: black;">
@@ -302,79 +139,8 @@
               </form>
             <% }) %>
           </div>
-          <script>
-            document.addEventListener('DOMContentLoaded', () => {
-                const addressButtons = document.querySelectorAll('.currentSwitch');
-                const removeAddress = document.querySelectorAll('.removeAddress');
-                
+      
 
-                removeAddress.forEach((address)=>{
-                    address.addEventListener("click",(e)=>{
-                    e.preventDefault()
-                    const id=address.id;
-                    Swal.fire({
-                        title: 'Are you sure?',
-                        icon: 'warning',
-                        showCancelButton: true,
-                        confirmButtonColor: '#D2122E',
-                        cancelButtonColor: '#720e9e',
-                        confirmButtonText: 'Remove!'
-                        }).then((result) => {
-                        if (result.isConfirmed) {
-                            window.location.href = `/user/deleteAddress?id=${id}`;
-                        }
-                        });
-                })
-                })
-
-                addressButtons.forEach(button => {
-                    button.addEventListener('change', async () => {
-                        const addressId = button.id;
-                        const success = await updateDefaultAddress(addressId);
-        
-                        if (success) {
-                            // If the update is successful, lock the selected switch
-                            button.disabled = true;
-        
-                            // Update the UI
-                            addressButtons.forEach(otherButton => {
-                                if (otherButton !== button) {
-                                    otherButton.checked = false;
-                                    otherButton.disabled = false; // Enable other switches
-                                }
-                            });
-                        }
-                    });
-                });
-        
-                async function updateDefaultAddress(addressId) {
-                    try {
-                        const response = await fetch(`/user/updateDefaultAddress?id=${addressId}`, {
-                            method: 'GET',
-                            headers: {
-                                'Content-Type': 'application/json',
-                            },
-                        });
-        
-                        if (response.ok) {
-                            showSuccess("Address Changed!")
-                            return true;
-                        } else {
-                            showAlert("Not Changed!")
-                            return false;
-                        }
-                    } catch (error) {
-                        console.error('Error:', error);
-                        return false;
-                    }
-                }
-        
-            });
-        </script>
-        
-
-
-
-
+<script src="../../public/jsFiles/profile.js"></script>
 <%- include('../layout/footer')-%>
 <%- include('../layout/footerHTML')-%>
